[package]
name = "network"
version = "0.1.1"
authors = ["Adithya Bhat <dth.bht@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
fnv = "1"
bincode = "1"
async-trait = "0.1"
log = "0"
bytes = "1"
tokio-stream = "0"
futures = "0"
rand = { version = "0.7", features = ["small_rng"] }
anyhow = "1"
thiserror = "1"

[dependencies.tokio-util]
version = "0"
features = ["codec", "compat"]

[dependencies.tokio]
features = ["net", "rt", "sync", "macros", "time"]
version = "1"

[features]
tcp = []
udp = []
tls = []
default = ["tcp"]