[workspace]
members = [
  "tcp-sender",
  "tcp-reliable-sender",
  "tcp-receiver",
  "common"
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
bytes = "1"
log = "0"
thiserror = "2"
futures = "0"
serde = { version = "1", features = ["derive"]}

[workspace.dependencies.tokio-util]
version = "0"
features = ["codec"]

[workspace.features]
ack = ["dep:serde"]
