[workspace]
members = [
  "tcp-sender",
  "tcp-reliable-sender",
  "tcp-receiver",
  "udp-sender",
  "udp-reliable-sender",
  "udp-receiver",
  "tls-sender",
  "tls-reliable-sender",
  "tls-receiver",
  "common",
  "stress-test",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
bytes = "1"
log = "0"
thiserror = "2"
futures = "0"
serde = { version = "1", features = ["derive"]}
socket2 = "0.5"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"

[workspace.dependencies.tokio-util]
version = "0"
features = ["codec"]

[workspace.features]
ack = ["dep:serde"]
