[package]
name = "common"
version = "0.2.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

# TLS dependencies (behind "tls" feature)
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

[features]
default = [ "ack" ]
ack = [ "dep:serde" ]
tls = [ "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:tokio-rustls" ]
