[package]
name = "stress-test"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "stress-test"
path = "src/main.rs"

[dependencies]
tcp-sender = { path = "../tcp-sender" }
tcp-receiver = { path = "../tcp-receiver" }
tcp-reliable-sender = { path = "../tcp-reliable-sender" }
udp-sender = { path = "../udp-sender" }
udp-receiver = { path = "../udp-receiver" }
udp-reliable-sender = { path = "../udp-reliable-sender" }
tls-sender = { path = "../tls-sender" }
tls-receiver = { path = "../tls-receiver" }
tls-reliable-sender = { path = "../tls-reliable-sender" }
common = { path = "../common", features = ["tls"] }
tokio-rustls = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
socket2 = { workspace = true }
fnv = "1"
log = { workspace = true }
env_logger = "0.11"

[dependencies.tokio]
version = "1"
features = ["net", "sync", "macros", "rt-multi-thread", "time", "io-util"]
