[package]
name = "tls-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
common = { version = "0.1.0", path = "../common", features = ["tls"] }
socket2 = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }

[dependencies.tokio]
version = "1"
features = ["net", "sync", "rt", "io-util"]

[features]
default = ["ack"]
ack = ["common/ack"]
